Bug 318821 - stat st_ctime is not the creation time but the change time
Summary: stat st_ctime is not the creation time but the change time
Status: RESOLVED FIXED
Alias: None
Product: kio-extras
Classification: Frameworks and Libraries
Component: NFS (other bugs)
Version First Reported In: 18.04.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-24 21:14 UTC by Benni Hill
Modified: 2021-02-05 11:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Benni Hill 2013-04-24 21:14:48 UTC
In kio_nfs.cpp:801 st_ctime is treated as the creation time but according to stat.h st_ctime is the status change time.
At line 819 something similar seems to happen.

From stat.h:
    __time_t st_atime;			/* Time of last access.  */
    __syscall_ulong_t st_atimensec;	/* Nscecs of last access.  */
    __time_t st_mtime;			/* Time of last modification.  */
    __syscall_ulong_t st_mtimensec;	/* Nsecs of last modification.  */
    __time_t st_ctime;			/* Time of last status change.  */          <<<------
    __syscall_ulong_t st_ctimensec;	/* Nsecs of last status change.  */

Reproducible: Always
Comment 1 Jonathan Marten 2021-02-05 11:12:19 UTC
Git commit e3fa40e7c9c6374f2ba598239228c84bdf2a65c8 by Jonathan Marten.
Committed on 05/02/2021 at 11:11.
Pushed by marten into branch 'master'.

nfs: Do not set UDS_CREATION_TIME

attributes.ctime is not the file birth time but the inode
(file metadata) change time, which is not supported in KIO.

M  +0    -2    nfs/nfsv2.cpp
M  +0    -2    nfs/nfsv3.cpp

https://invent.kde.org/network/kio-extras/commit/e3fa40e7c9c6374f2ba598239228c84bdf2a65c8