nfs: Do not set UDS_CREATION_TIME

attributes.ctime is not the file birth time but the inode
(file metadata) change time, which is not supported in KIO.

BUG:318821